# AzureTower

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  story.txt
Content/Textures/: StoneTileMap.aseprite
Include/: Azure.hpp  AzureConfig.hpp  AzureTypes.hpp  Building.hpp  Enemy.hpp  Entity.hpp  Interactable.hpp  Player.hpp  TextureManager.hpp  Tower.hpp  tilemap.hpp
Source/: .clang-format  Azure.cpp  Building.cpp  Enemy.cpp  Entity.cpp  Interactable.cpp  Main.cpp  Player.cpp  TextureManager.cpp  Tower.cpp  tilemap.cpp  utilityStuff.cpp
